# tt

./: .gitignore  404.html  README.md  index.html  pyproject.toml
basic_usage/: index.html
chipscope_file_format/: index.html
derivative_traces/: index.html
docs/: INSTALLATION.md  README.md  USAGE.md
installation/: index.html
search/: search_index.json
site/: mkdocs.yml
site/docs/: basic_usage.md  chipscope_file_format.md  derivative_traces.md  index.md  installation.md  trace_settings.md  views.md
src/tt/: __init__.py  project.py
src/tt/data/: domain_type.py  function.py  jsonable.py  legends.py  overlays.py  persistable.py  project.py  punits.py  trace.py  trace_source.py  view.py
src/tt/gui/: app.py  elemental.py  figure.py  main.py  main_window.py  new_project_dialog.py  trace_config_dialog.py  view.py
src/tt/gui/help/: __init__.py  help_window.py
src/tt/gui/menus/: file_menu.py  help_menu.py  menu_bar.py  windows_menu.py
src/tt/gui/panels/: info_panel.py  project_panel.py  traces_panel.py  views_panel.py
src/tt/gui/project_management/: new_project_dialog.py  open_existing_project_dialog.py
src/tt/gui/settings/: settings_dialog.py
src/tt/gui/trace/: create_new_trace_dialog.py  figure.py  trace_config_dialog.py  trace_picker.py
src/tt/gui/views/: create_view_dialog.py  view_config_dialog.py  view_window.py
trace_settings/: index.html
views/: index.html
