[project]
name = "tt"
dynamic = ["version"]
description = "Trace Tool"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pyside6==6.8.0.2",
    "returns==0.24.0",
    "polars==1.14.0",
    "pytide6 @ git+https://github.com/priimak/PyTide6.git@master"
]

[build-system]
requires = ["setuptools", "wheel", "setuptools-git-versioning"]
build-backend = "setuptools.build_meta"

[tool.setuptools-git-versioning]
enabled = true

[tool.setuptools.packages.find]
where = ["src"]
